@startuml MathClubBot3
namespace commands {
    class ForumCommand {
        + {static} getForum(CommandSendEvent event)
    }

    class FunnyCommand {
        + {static} sendHaruHaru(MessageCreateEvent event)
    }
}

namespace discord {
    class DiscordClientHolder <<Singleton>> {
        - GatewayDiscordClient gateway
        + GatewayDiscordClient getClient()
    }

    class DiscordListener <<Singleton>> {
        - Subject<CommandSendEvent> commandSendSubject
        + Observable<CommandSendEvent> onMessageCreate()
        + messageCreate(MessageCreateEvent event)
    }
}

namespace events {
    class CommandSendEvent {
        - List<String> args
        - Snowflake channelId
        + CommandSendEvent(List<String> args, Snowflake channelId)
        + getArgs() : List<String>
        + getArg(int index) : String
        + getChannelId() : Snowflake
    }
}

namespace forum {
    class ForumThread {
        + int id
        + int replyId
        + int log
        + String SimpleSubject
        + String text
        + String author
        + Date date
    }

    class ForumThreadFactory {
        + createForumThread(Document document) : ForumThread
    }

    class ForumScraper {
        - String forumUrl
        - int maxPage
        + getRecentThreads(int hours) : List<ForumThread>
    }

    class ForumNotifier {
        - Snowflake channelId
        + sendNotice(List<ForumThread> threads)
        + sendNotice(List<ForumThread> threads, Snowflake channelId)
    }

    class ForumTask {
        - int intervalHours
        + startScraping()
    }

    class ForumTextStore <<Singleton>> {
        - Map<URL, ForumText> urlToText
        + getForumText(URL url)
        + putForumText(URL url, ForumText text)
        + hasForumText(URL url)
    }

    class ForumText {
        - int id
        - String text
        + ForumText(int id, String text)
        + getId()
        + getText()
    }

    ForumThread <-- ForumThreadFactory
    ForumThreadFactory <-- ForumScraper
    ForumScraper <-- ForumTask
    ForumNotifier <-- ForumTask
    ForumTextStore <-- ForumThreadFactory
    ForumText <-- ForumThreadFactory
}

events.CommandSendEvent o-- discord.DiscordListener
forum.ForumScraper <-- commands.ForumCommand
forum.ForumNotifier <-- commands.ForumCommand
@enduml